	(gray_bitmap_width, gray_bitmap_height, gray_bitmap_bits):
	Remove variables.
	(w32_pass_extra_mouse_buttons_to_system, w32_strict_fontnames)
	(w32_pass_multimedia_buttons_to_system, w32_strict_painting)
	(Vw32_charset_info_alist, w32_to_x_color, w32_init_class)
	(w32_createscrollbar, w32_createwindow, my_post_msg, w32_get_modifiers)
	(w32_grabbed_keys, cancel_all_deferred_msgs): Make static.
	(syms_of_w32fns) <w32-pass-multimedia-buttons-to-system>:
	Fix typos in docstring.

2007-11-13  Juanma Barranquero  <lekktu@gmail.com>

	* w32fns.c (Fw32_register_hot_key): Don't try to register hot key
	if w32_parse_hot_key returned nil.

2007-11-10  Stefan Monnier  <monnier@iro.umontreal.ca>

	* xdisp.c (load_overlay_strings): Fix copy&paste typo.

2007-11-09  Jason Rumney  <jasonr@gnu.org>

	* s/ms-w32.c (USE_TOOLKIT_SCROLL_BARS): Define.

	* w32term.c (w32_scroll_bar_handle_click): Use SCROLL_BAR_CLICK_EVENT.

	* keyboard.c (discard_mouse_events, make_lispy_event) [WINDOWSNT]:
	Remove W32_SCROLL_BAR_CLICK_EVENT.

	* termhooks.h (enum event_kind) [WINDOWSNT]: Likewise.
	Add MULTIMEDIA_KEY_EVENT.

	* keyboard.c (lispy_function_keys) [WINDOWSNT]: Add more keys.
	(lispy_multimedia_keys) [WINDOWSNT]: New array.
	(make_lispy_event) [WINDOWSNT]: Use it to translate
	MULTIMEDIA_KEY_EVENT.

	* w32term.h (WM_APPCOMMAND): Define if not already.
	(GET_APPCOMMAND_LPARAM): Likewise.

	* w32term.c (w32_read_socket): Generate MULTIMEDIA_KEY_EVENT from
	WM_APPCOMMAND.

	* w32fns.c (w32_pass_multimedia_buttons_to_system): New user option.
	(syms_of_w32fns): Export and initialize it.
	(w32_wnd_proc): Pass WM_APPCOMMAND on to w32_read_socket.

2007-11-09  Chong Yidong  <cyd@stupidchicken.com>

	* dispextern.h (struct it): Don't define OVERLAY_STRING_CHUNK_SIZE
	twice.

	* xdisp.c (handle_face_prop): Fix last change.

2007-11-09  Richard Stallman  <rms@gnu.org>

	* xdisp.c (handle_face_prop): Test for strings that came from overlays,
	not just for after-strings and before-strings.